# cookie-finder

./: .gitignore  Makefile  README.md  find_working_camera.py  main.py  motor_gimbal.py  orange-pi-setup-guide.md  probe_cdc.py  probe_resolution.py  probe_usb.py  probe_uvc_xu.py  pyproject.toml  stepper_motor_controller.py  thermal_capture.tiff  thermal_processor.py  uvc_controls.py  web_server.py
.github/: copilot-instructions.md
probing_thermal_camera/: probe_serial.py
static/: thermal-viewer.js
templates/: index.html
thermal_camera_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
